@@ -2,6 +2,8 @@
 $head_prefix\usepackage{fixltx2e} % LaTeX patches, \textsubscript
 \usepackage{cmap} % fix search and cut-and-paste in PDF
 $requirements
+%%% Custom LaTeX preamble
+$latex_preamble
 %%% User specified packages and stylesheets
 $stylesheet
 %%% Fallback definitions for Docutils-specific commands
