@@ -17,6 +17,12 @@
 \newlength{\DUtablewidth} % internal use in tables
 \usepackage{tabularx}
 
+%%% Custom LaTeX preamble
+% PDF Standard Fonts
+\usepackage{mathptmx} % Times
+\usepackage[scaled=.90]{helvet}
+\usepackage{courier}
+
 %%% User specified packages and stylesheets
 
 %%% Fallback definitions for Docutils-specific commands
